<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Item"
          android:id="@+id/font_select"
          app:showAsAction="always"
          android:icon="@drawable/ic_font"/>
    <item android:title="Item"
          android:id="@+id/background_select"
          android:icon="@drawable/ic_background"
          app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_menu"
        android:orderInCategory="100"
        android:title="Option Menu"
        app:showAsAction="always">


        <menu>
            <item android:title="@string/rate"
                  android:id="@+id/rate"
                  android:icon="@drawable/iconbinhchon"
                />
            <item android:title="@string/share"
                  android:id="@+id/share"
                android:icon="@drawable/ic_share"/>
            <item android:title="@string/upload"
                  android:id="@+id/upload"
                  android:icon="@drawable/ic_arrow_upward_black_24dp"/>
            <item android:title="@string/Download"
                  android:id="@+id/download"
                  android:icon="@drawable/ic_arrow_downward_black_24dp"/>
        </menu>
    </item>

</menu>