<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <TextView
      android:text="@string/time_khoa"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/txtTimeKhoa"
      android:visibility="gone"
      android:textAlignment="center"/>

  <ImageView
      android:id="@+id/imgKhoa"
      android:layout_width="50.0dp"
      android:layout_height="50.0dp"
      android:src="@drawable/iconkhoa"
      />

  <TextView
      android:id="@+id/messageKhoa"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/enter_your_pass"
      android:textSize="18.0sp"
      android:gravity="center"
      android:padding="20.0dp"
      />

  <in.arjsna.passcodeview.PassCodeView
      android:id="@+id/pass_code_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:digits="4"
      app:digit_size="30.0dp"
      app:key_text_size="30.0sp"
      android:padding="25.0dp"
      app:empty_drawable="@drawable/empty_dot"
      app:filled_drawable="@drawable/filled_dot"
      />

  <TextView
      android:id="@+id/txtXoaPass"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/xoa_pass"
      android:textAlignment="center"
      android:textColor="#ffc800"
      android:textSize="20sp"
      android:textStyle="bold|italic"/>

</LinearLayout>