<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#FFFFFF"
              android:orientation="vertical"
              android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/txtTaskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Divider -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#c9c9c9" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/rate"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:max="5"
        android:rating="5" />

    <!-- Button Container -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnrateCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="#348EEF"
            android:text="@android:string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnRate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#348EEF"
            android:text="@string/btn_rate"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>