<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/TextViewCustomFont"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/list"
                android:layout_height="400dp"
                >

                <include layout="@layout/layout_material_calendar"
                         android:layout_height="match_parent"
                         android:layout_width="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="10"
                android:background="#00000000"
                android:layout_marginTop="10dp"
                android:layout_height="50dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/button_nhatkyganday"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/iconthoitiet"
                        android:id="@+id/imageView5"
                        android:layout_weight="2"/>

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtToDay"
                        android:layout_gravity="center"
                        style="@style/TextColor"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/button_nhatkyganday"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/icon_nhatkyngay"
                        android:id="@+id/imageView6"
                        android:layout_weight="2"/>

                    <TextView
                        android:text="@string/have_nhat_ki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtHaveNhatKi"
                        android:layout_gravity="center"
                        style="@style/TextColor"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginTop="10dp">

                <Button
                    android:text="pass."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSetPass"
                    android:background="#55000000"
                    style="@style/TextColor"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="10"
                android:background="#00000000"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/button_nhatkyganday"
                    android:weightSum="10">

                    <ImageView
                        app:srcCompat="@drawable/icon_nhatkyganday"
                        android:layout_weight="2"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"/>

                    <TextView
                        android:text="@string/gan_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/TextColor"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:weightSum="10"
                    android:background="@drawable/button_nhatkyganday">
                    <ImageView
                        app:srcCompat="@drawable/iconmatkhau"
                        android:layout_weight="2"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"/>

                    <TextView
                        android:text="@string/set_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/TextColor"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/txtSetPass"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/lnNhatKiGanDay"
                android:layout_marginBottom="50dp">

                <include layout="@layout/layout_nhat_ki_gan_day"
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"/>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">


        <com.google.android.gms.plus.PlusOneButton
            xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
            android:id="@+id/plus_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btn_share_fb"
            plus:annotation="inline"
            plus:size="standard" />
    </LinearLayout>

</RelativeLayout>